Rename method and fix type recognition

--- a/templates/seman/index.html
+++ b/templates/seman/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="add_file/" enctype="multipart/form-data" method="post">
+    <form action="upload_file/" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <input type="file" name="file">
         <br>
