Implemented ticket 30 and some refactoring

--- a/templates/seman/index.html
+++ b/templates/seman/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Главная страница</title>
 </head>
 <body>
     <form action="upload_file/" enctype="multipart/form-data" method="post">
