--- a/templates/seman/index.html
+++ b/templates/seman/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 </head>
 <body>
     <form action="upload_file/" enctype="multipart/form-data" method="post">
