--- a/templates/seman/result.html
+++ b/templates/seman/result.html
@@ -3,56 +3,195 @@
 <head>
     <meta charset="UTF-8">
     <title>Результат обработки текста</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 </head>
 <body>
 
-    <table>
-        <tr>
-            <th>Наименования показателя</th>
-            <th>Значение</th>
-        </tr>
-        {% for item in semantics %}
-            <tr>
-                <td>{{ item.title }}</td>
-                <td>{{ item.val }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+<table>
+    <tr>
+        <th>Наименования показателя</th>
+        <th>Значение</th>
+    </tr>
+    {% for item in semantics %}
+    <tr>
+        <td>{{ item.title }}</td>
+        <td>{{ item.val }}</td>
+    </tr>
+    {% endfor %}
+</table>
 
-    <br><br>
+<br><br>
 
-    <table>
-        <tr>
-            <th>Слово</th>
-            <th>Количество</th>
-            <th>Частота, %</th>
-        </tr>
-        {% for item in words %}
-            <tr>
-                <td>{{ item.word }}</td>
-                <td>{{ item.count }}</td>
-                <td>{{ item.frequency }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+<table>
+    <tr>
+        <th>Слово</th>
+        <th>Количество</th>
+        <th>Частота, %</th>
+    </tr>
+    {% for item in words %}
+    <tr class="count_tr">
+        <td class="count_td_name">{{ item.word }}</td>
+        <td class="count_td">{{ item.count }}</td>
+        <td class="count_td_fr">{{ item.frequency }}</td>
+    </tr>
+    {% endfor %}
+</table>
 
-    <br><br>
+<br><br>
 
-    <table>
-        <tr>
-            <th>Слово</th>
-            <th>Количество</th>
-            <th>Частота, %</th>
-        </tr>
-        {% for item in stop_words %}
-            <tr>
-                <td>{{ item.word }}</td>
-                <td>{{ item.count }}</td>
-                <td>{{ item.frequency }}</td>
-            </tr>
-        {% endfor %}
-    </table>
+<table>
+    <tr>
+        <th>Слово</th>
+        <th>Количество</th>
+        <th>Частота, %</th>
+    </tr>
+    {% for item in stop_words %}
+    <tr>
+        <td>{{ item.word }}</td>
+        <td>{{ item.count }}</td>
+        <td>{{ item.frequency }}</td>
+    </tr>
+    {% endfor %}
+</table>
 
+
+
+<div style="width: 600px; height: 100%;">
+    <canvas id="myChart" width="200" height="200"></canvas>
+</div>
+<br><br>
+<div style="width: 400px; height: 900px;">
+    <canvas id="myChart2" width="200" height="200"></canvas>
+</div>
+<br><br>
+<div style="width: 600px; height: 900px;">
+    <canvas id="myChart3" width="200" height="200"></canvas>
+</div>
+<script>
+
+    сolors_back = [
+        'rgba(255, 99, 132, 0.2)',
+        'rgba(54, 162, 235, 0.2)',
+        'rgba(255, 206, 86, 0.2)',
+        'rgba(75, 192, 192, 0.2)',
+        'rgba(153, 102, 255, 0.2)',
+        'rgba(255, 159, 64, 0.2)'
+    ];
+    сolors_border = [
+        'rgba(255, 99, 132, 1)',
+        'rgba(54, 162, 235, 1)',
+        'rgba(255, 206, 86, 1)',
+        'rgba(75, 192, 192, 1)',
+        'rgba(153, 102, 255, 1)',
+        'rgba(255, 159, 64, 1)'
+    ];
+
+    count_words = [];
+    name_words = [];
+    new_color_back = [];
+    new_color_border = [];
+    $('.count_tr').each(function () {
+        if($(this).children('.count_td').html() > 1){
+            name_words.push($(this).children('.count_td_name').html());
+            count_words.push($(this).children('.count_td').html());
+            new_color_back.push(arrayRandElement(сolors_back));
+            new_color_border.push(arrayRandElement(сolors_border));
+        }
+    });
+
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: name_words,
+            datasets: [{
+                label: 'Количество',
+                data: count_words,
+                backgroundColor: new_color_back,
+                //borderColor: new_color_border,
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+    function arrayRandElement(arr) {
+        var rand = Math.floor(Math.random() * arr.length);
+        return arr[rand];
+    }
+
+    frequency_words_line = [];
+    name_words_line = [];
+
+    $('.count_tr').each(function () {
+        name_words_line.push($(this).children('.count_td_name').html());
+        frequency_words_line.push($(this).children('.count_td_fr').html());
+
+    });
+
+    var ctx = document.getElementById('myChart2').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: name_words_line,
+            datasets: [{
+                label: 'Частота',
+                data: frequency_words_line,
+                //backgroundColor: new_color_back,
+                //borderColor: new_color_border,
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+
+    frequency_words_cufa = [];
+    count_words_cufa = [];
+    data_cufa = [];
+    $('.count_tr').each(function () {
+        data_cufa.push({'x': $(this).children('.count_td').html(), 'y': $(this).children('.count_td_fr').html()});
+    });
+
+    console.log(data_cufa);
+
+    var ctx = document.getElementById('myChart3').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'scatter',
+        data: {
+            datasets: [{
+                label: 'Частота',
+                data: data_cufa,
+                //backgroundColor: new_color_back,
+                //borderColor: new_color_border,
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                xAxes: [{
+                    type: 'linear',
+                    position: 'bottom'
+                }]
+            }
+        }
+    });
+</script>
 
 </body>
 </html>
