--- a/templates/seman/result.html
+++ b/templates/seman/result.html
@@ -1,93 +1,97 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Результат обработки текста</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Результат обработки текста</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    </head>
+    <body>
+        <button id="nameAsc">Сортировать по алфавиту в прямом порядке</button>
+        <button id="nameDesc">Сортировать по алфавиту в обратном порядке</button>
+        <br>
+        <button id="valueAsc">Сортировать по числовому параметру в прямом порядке</button>
+        <button id="valueDesc">Сортировать по числовому параметру в обратном порядке</button>
+        <table>
+            <tr>
+                <th>Наименования показателя</th>
+                <th>Значение</th>
+            </tr>
+            {% for item in semantics %}
+            <tr>
+                <td>{{ item.title }}</td>
+                <td>{{ item.val }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
-<table>
-    <tr>
-        <th>Наименования показателя</th>
-        <th>Значение</th>
-    </tr>
-    {% for item in semantics %}
-    <tr>
-        <td>{{ item.title }}</td>
-        <td>{{ item.val }}</td>
-    </tr>
-    {% endfor %}
-</table>
+        <br><br>
 
-<br><br>
+        <table>
+            <tr>
+                <th>Слово</th>
+                <th>Количество</th>
+                <th>Частота, %</th>
+            </tr>
+            {% for item in words %}
+            <tr class="count_tr">
+                <td class="count_td_name">{{ item.word }}</td>
+                <td class="count_td">{{ item.count }}</td>
+                <td class="count_td_fr">{{ item.frequency }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
-<table>
-    <tr>
-        <th>Слово</th>
-        <th>Количество</th>
-        <th>Частота, %</th>
-    </tr>
-    {% for item in words %}
-    <tr class="count_tr">
-        <td class="count_td_name">{{ item.word }}</td>
-        <td class="count_td">{{ item.count }}</td>
-        <td class="count_td_fr">{{ item.frequency }}</td>
-    </tr>
-    {% endfor %}
-</table>
+        <br><br>
 
-<br><br>
+        <table>
+            <tr>
+                <th>Слово</th>
+                <th>Количество</th>
+                <th>Частота, %</th>
+            </tr>
+            {% for item in stop_words %}
+            <tr>
+                <td>{{ item.word }}</td>
+                <td>{{ item.count }}</td>
+                <td>{{ item.frequency }}</td>
+            </tr>
+            {% endfor %}
+        </table>
+        
+        <br><br>
+        
+        <table>
+            <tr>
+                <th>Слово</th>
+                <th>Количество</th>
+                <th>Частота, %</th>
+            </tr>
+            {% for item in english_words %}
+            <tr class="count_tr_en">
+                <td class="count_td_name_en">{{ item.word }}</td>
+                <td class="count_td_en">{{ item.count }}</td>
+                <td>{{ item.frequency }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 
-<table>
-    <tr>
-        <th>Слово</th>
-        <th>Количество</th>
-        <th>Частота, %</th>
-    </tr>
-    {% for item in stop_words %}
-    <tr>
-        <td>{{ item.word }}</td>
-        <td>{{ item.count }}</td>
-        <td>{{ item.frequency }}</td>
-    </tr>
-    {% endfor %}
-</table>
-  
-<br><br>
-  
-<table>
-    <tr>
-        <th>Слово</th>
-        <th>Количество</th>
-        <th>Частота, %</th>
-    </tr>
-    {% for item in english_words %}
-    <tr class="count_tr_en">
-        <td class="count_td_name_en">{{ item.word }}</td>
-        <td class="count_td_en">{{ item.count }}</td>
-        <td>{{ item.frequency }}</td>
-     </tr>
-    {% endfor %}
-</table>
-
-<div style="width: 600px; height: 100%;">
-    <canvas id="myChart" width="200" height="200"></canvas>
-</div>
-<br><br>
-<div style="width: 400px; height: 900px;">
-    <canvas id="myChart2" width="200" height="200"></canvas>
-</div>
-<br><br>
-<div style="width: 600px; height: 900px;">
-    <canvas id="myChart3" width="200" height="200"></canvas>
-</div>
-<br><br>
-<div style="width: 600px; height: 900px;">
-    <canvas id="myChart4" width="200" height="200"></canvas>
-</div>
-<script src="{% static 'script/main.js' %}"></script>
-</body>
+        <div style="width: 600px;">
+            <canvas id="myChart" width="200" height="200"></canvas>
+        </div>
+        <br><br>
+        <div style="width: 400px;">
+            <canvas id="myChart2" width="200" height="200"></canvas>
+        </div>
+        <br><br>
+        <div style="width: 600px;">
+            <canvas id="myChart3" width="200" height="200"></canvas>
+        </div>
+        <br><br>
+        <div style="width: 600px;">
+            <canvas id="myChart4" width="200" height="200"></canvas>
+        </div>
+        <script src="{% static 'script/main.js' %}"></script>
+    </body>
 </html>
